deploy_configs/istio-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: myapp-v1
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: myapp
        version: v1
    spec:
      serviceAccountName: myapp-sa
      containers:
      - name: myapp-container
        image: gcr.io/sd-test-246101/fe_min:1
        #image: gcr.io/sd-test-246101/fe_min:debug1        
        imagePullPolicy: Always
        ports:
        - containerPort: 8080        
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: myapp-v2
spec:
  replicas: 0
  template:
    metadata:
      labels:
        app: myapp
        version: v2
    spec:
      containers:
      - name: myapp-container
        image: gcr.io/sd-test-246101/fe_min:2
        imagePullPolicy: Always
        ports:
        - containerPort: 8080      
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: be-v1
  labels:
    type: be
    version: v1
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: be
        version: v1
    spec:
      serviceAccountName: be-sa
      containers:
      - name: be-container
        image: gcr.io/sd-test-246101/be_min:1
        imagePullPolicy: Always
        ports:
        - containerPort: 8080        
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: be-v2
  labels:
    type: be
    version: v2
spec:
  replicas: 0
  template:
    metadata:
      labels:
        app: be
        version: v2
    spec:
      serviceAccountName: be-sa
      containers:
      - name: be-container
        image: gcr.io/sd-test-246101/be_min:2
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
