deploy_configs/istio-services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: myapp
  labels:
    app: myapp
spec:
  ports:
  - port: 8080
    name: http
  selector:
    app: myapp
---
apiVersion: v1
kind: Service
metadata:
  name: be
  labels:
    app: be
spec:
  ports:
  - name: http
    port: 8080
  selector:
    app: be
---
